--- a/.github/workflows/company-news.yml
+++ b/.github/workflows/company-news.yml
@@ -3,8 +3,8 @@
 name: Company News
 
 on:
-  schedule:
-    - cron: '0 0 * * 3,5' # Runs Wednesday and Friday at midnight UTC
+  # schedule:
+  #   - cron: '0 0 * * 3,5' # Runs Wednesday and Friday at midnight UTC
   workflow_dispatch:
 
 # Add this permissions section
