--- a/.github/workflows/company-news.yml
+++ b/.github/workflows/company-news.yml
@@ -32,14 +32,16 @@ jobs:
           # Process first company to get headers
           first_company="SpaceX"
           ddgs news -k "$first_company" -m 1 -o "news-$first_company.csv"
-          cat "news-$first_company.csv" > aggregated-news.csv
+          
+          # Add company column to the first company's CSV
+          awk -F, 'NR==1 {print $0 ",company"} NR>1 {print $0 ",\"'$first_company'\""}' "news-$first_company.csv" > aggregated-news.csv
           
           # Process remaining companies without headers
           for company in "ByteDance" "OpenAI" "Stripe" "SHEIN" "Databricks" "Anthropic" "xAI" "Revolut" "Canva"; do
             if [ "$company" != "$first_company" ]; then
               ddgs news -k "$company" -m 1 -o "news-$company.csv"
-              # Skip the header row (first line) when appending
-              tail -n +2 "news-$company.csv" >> aggregated-news.csv
+              # Skip the header row and add company name
+              awk -F, 'NR>1 {print $0 ",\"'$company'\""}' "news-$company.csv" >> aggregated-news.csv
             fi
           done
       
