--- a/.github/workflows/company-news.yml
+++ b/.github/workflows/company-news.yml
@@ -27,22 +27,17 @@ jobs:
       - name: Get company news
         run: |
           source ./venv/bin/activate
-          > aggregated-news.csv  # Initialize empty file
           
-          # Process first company to get headers
-          first_company="SpaceX"
-          ddgs news -k "$first_company" -m 1 -o "news-$first_company.csv"
+          # Create header for aggregated CSV with company as first column
+          echo "company,date,title,body,url,image,source" > aggregated-news.csv
           
-          # Add company column to the first company's CSV
-          awk -F, 'NR==1 {print $0 ",company"} NR>1 {print $0 ",\"'$first_company'\""}' "news-$first_company.csv" > aggregated-news.csv
-          
-          # Process remaining companies without headers
-          for company in "ByteDance" "OpenAI" "Stripe" "SHEIN" "Databricks" "Anthropic" "xAI" "Revolut" "Canva"; do
-            if [ "$company" != "$first_company" ]; then
-              ddgs news -k "$company" -m 1 -o "news-$company.csv"
-              # Skip the header row and add company name
-              awk -F, 'NR>1 {print $0 ",\"'$company'\""}' "news-$company.csv" >> aggregated-news.csv
-            fi
+          # Process companies and append to CSV
+          for company in "SpaceX" "ByteDance" "OpenAI" "Stripe" "SHEIN" "Databricks" "Anthropic" "xAI" "Revolut" "Canva"; do
+            echo "Processing $company..."
+            ddgs news -k "$company" -m 1 -o "news-$company.csv"
+            
+            # Skip header row and add company as first column for each row
+            awk -F, 'NR>1 {print "\"'$company'\","$0}' "news-$company.csv" >> aggregated-news.csv
           done
       
       - name: Convert CSV to HTML
