--- a/.github/workflows/company-news.yml
+++ b/.github/workflows/company-news.yml
@@ -33,7 +33,7 @@ jobs:
           echo "company,date,title,body,url,image,source" > aggregated-news.csv
           
           # Process companies and append to CSV
-          for company in "Unaliwear" "BrainCheck" "Dermala" "Oralucent" "Flowly" "Rosy" "De Oro Devices" "Partum Health" "Fort Health" "RubyWell" "Atlantic Sea Farms" "VidaFuel"; do
+          for company in 'Unaliwear' 'BrainCheck' 'Dermala' 'Oralucent' 'Flowly' 'Rosy' 'De Oro Devices' 'Partum Health' 'Fort Health' 'RubyWell' 'Atlantic Sea Farms' 'VidaFuel'; do
             echo "Processing $company..."
             # Normal processing with retry
             ddgs news -k "$company company" -m 2 -o "news-$company.csv" || 
