--- a/.github/workflows/company-news.yml
+++ b/.github/workflows/company-news.yml
@@ -5,7 +5,7 @@ name: Company News
 on:
   push:
   schedule:
-    - cron: '0 0 * * 3,5' # Runs Wednesday and Friday at midnight UTC
+    - cron: '0 7 * * 3,5' # Runs Wednesday and Friday at midnight Mountain Time (during DST)
   workflow_dispatch:
 
 # Add this permissions section
